--- a/Web.config
+++ b/Web.config
@@ -11,6 +11,10 @@
   <connectionStrings>
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApplication1-20240110110919.mdf;Initial Catalog=aspnet-WebApplication1-20240110110919;Integrated Security=True"
       providerName="System.Data.SqlClient" />
+	  <add name="GuestContext"
+		   connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=C:\Users\opilane\source\repos\TimurDenisenkoTARpv22\WebApplication1\App_Data\WebApplication1.Models.GuestContext.mdf;Initial Catalog=aspnet-WebApplication1-20240110110919;
+		   Integrated Security=True"
+            providerName="System.Data.SqlClient" />
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
