--- a/Web.config
+++ b/Web.config
@@ -12,7 +12,11 @@
     <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApplication1-20240110110919.mdf;Initial Catalog=aspnet-WebApplication1-20240110110919;Integrated Security=True"
       providerName="System.Data.SqlClient" />
 	  <add name="GuestContext"
-		   connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=C:\Users\37256\source\repos\WebApplication1\App_Data\WebApplication1.Models.GuestContext.mdf;Initial Catalog=aspnet-WebApplication1-20240110110919;
+		   connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=C:\Users\opilane\source\repos\TimurDenisenkoTARpv22\WB 1\App_Data\WebApplication1.Models.GuestContext.mdf;Initial Catalog=aspnet-WebApplication1-20240110110919;
+		   Integrated Security=True"
+            providerName="System.Data.SqlClient" />
+	  <add name="HolidayContext"
+		   connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=C:\Users\opilane\source\repos\TimurDenisenkoTARpv22\WB 1\App_Data\WebApplication1.Models.HolidayContext.mdf;Initial Catalog=aspnet-WebApplication1-20240110110920;
 		   Integrated Security=True"
             providerName="System.Data.SqlClient" />
   </connectionStrings>
