--- a/bin/WebApplication1.dll.config
+++ b/bin/WebApplication1.dll.config
@@ -9,16 +9,13 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=|DataDirectory|\aspnet-WebApplication1-20240110110919.mdf;Initial Catalog=aspnet-WebApplication1-20240110110919;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=C:\Users\opilane\source\repos\TimurDenisenkoTARpv22\WB 1\App_Data\WebApplication1.Models.GuestContext.mdf;Initial Catalog=aspnet-WebApplication1-20240110110919;Integrated Security=True"
       providerName="System.Data.SqlClient" />
 	  <add name="GuestContext"
 		   connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=C:\Users\opilane\source\repos\TimurDenisenkoTARpv22\WB 1\App_Data\WebApplication1.Models.GuestContext.mdf;Initial Catalog=aspnet-WebApplication1-20240110110919;
 		   Integrated Security=True"
             providerName="System.Data.SqlClient" />
-	  <add name="HolidayContext"
-		   connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=C:\Users\opilane\source\repos\TimurDenisenkoTARpv22\WB 1\App_Data\WebApplication1.Models.HolidayContext.mdf;Initial Catalog=aspnet-WebApplication1-20240110110920;
-		   Integrated Security=True"
-            providerName="System.Data.SqlClient" />
+	  
   </connectionStrings>
   <appSettings>
     <add key="webpages:Version" value="3.0.0.0" />
