--- a/Web.config
+++ b/Web.config
@@ -9,10 +9,10 @@
     <section name="entityFramework" type="System.Data.Entity.Internal.ConfigFile.EntityFrameworkSection, EntityFramework, Version=6.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" requirePermission="false" />
   </configSections>
   <connectionStrings>
-    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=C:\Users\37256\source\repos\WB 1\App_Data\WebApplication1.Models.GuestContext.mdf;Initial Catalog=aspnet-WebApplication1-20240110110919;Integrated Security=True"
+    <add name="DefaultConnection" connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=C:\Users\opilane\source\repos\TimurDenisenkoTARpv22\WB 2\App_Data\WebApplication1.Models.GuestContext.mdf;Initial Catalog=aspnet-WebApplication1-20240110110919;Integrated Security=True"
       providerName="System.Data.SqlClient" />
 	  <add name="GuestContext"
-		   connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=C:\Users\37256\source\repos\WB 1\App_Data\WebApplication1.Models.GuestContext.mdf;Initial Catalog=aspnet-WebApplication1-20240110110919;
+		   connectionString="Data Source=(LocalDb)\MSSQLLocalDB;AttachDbFilename=C:\Users\opilane\source\repos\TimurDenisenkoTARpv22\WB 2\App_Data\WebApplication1.Models.GuestContext.mdf;Initial Catalog=aspnet-WebApplication1-20240110110919;
 		   Integrated Security=True"
             providerName="System.Data.SqlClient" />
 	  
